[gd_scene load_steps=5 format=3 uid="uid://bhup6p83fy76m"]

[ext_resource type="Script" path="res://scripts/attacks/tracking_arrow.gd" id="1_1lwdb"]
[ext_resource type="Texture2D" uid="uid://cno7gtexritug" path="res://assets/Pixel Crawler - FREE - 1.8/Weapons/Wood/Wood.png" id="2_m3g65"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_664th"]
size = Vector2(14, 7)

[sub_resource type="CircleShape2D" id="CircleShape2D_50gbr"]

[node name="tracking_arrow" type="Area2D"]
script = ExtResource("1_1lwdb")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_m3g65")
region_enabled = true
region_rect = Rect2(32.6085, 3.86385, 14.7988, 7.16192)

[node name="hitbox" type="CollisionShape2D" parent="."]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_664th")

[node name="tracking_area" type="Area2D" parent="."]

[node name="tracking" type="CollisionShape2D" parent="tracking_area"]
scale = Vector2(9.03275, 9.17771)
shape = SubResource("CircleShape2D_50gbr")

[node name="TrackingPing" type="Timer" parent="."]
autostart = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_entered" from="tracking_area" to="." method="_on_tracking_area_body_entered"]
[connection signal="timeout" from="TrackingPing" to="." method="_on_tracking_ping_timeout"]
